--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -149,12 +149,14 @@ a {
 
 }
 
+@import 'components/add-another';
 @import 'components/bucket';
 @import 'components/buttons';
 @import 'components/filter-buttons';
 @import 'components/forms';
 @import 'components/headers';
 @import 'components/option-list';
+@import 'components/intro';
 @import 'components/responsive';
 @import 'components/single-select';
 @import 'components/social';
