Add responsive css for allies page
make strips consistent height
fix filter-buttons position on allies and subjects
add responsive css to allies page

--- a/src/app/pages/allies/allies.hbs
+++ b/src/app/pages/allies/allies.hbs
@@ -1,17 +1,20 @@
 <style scoped>
     @import url(/app/pages/allies/allies.css);
 </style>
-<div class="hero text-content">
-    <h1>Friends in HigherEd Places.</h1>
-    <p class="subhead">
-        OpenStax allies provide additional tools alongside our OpenStax texts.
-        We share the belief that as allies, we can go further to change education
-        and make high­quality learning materials affordable and accessible.
-    </p>
+<div class="hero">
+    <div class="container">
+        <h1>Friends in HigherEd Places.</h1>
+        <p class="subhead">
+            OpenStax allies provide additional tools alongside our OpenStax texts.
+            We share the belief that as allies, we can go further to change education
+            and make high­quality learning materials affordable and accessible.
+        </p>
+    </div>
 </div>
-<div class="filter">
-    <div class="filter-buttons"></div>
-</div>
-{{{strips}}}
-<div class="blurbs text-content">
+<div class="blurbs">
+    {{{strips}}}
+    <div class="filter">
+        <div class="filter-buttons"></div>
+    </div>
+    <div class="container"></div>
 </div>
