--- a/src/app/pages/allies/ally/ally.hbs
+++ b/src/app/pages/allies/ally/ally.hbs
@@ -1,4 +1,4 @@
-<div class="logo">{{#if logoUrl}}<img src="{{logoUrl}}" />{{/if}}</div>
+{{#if logoUrl}}<div class="logo"><img src="{{logoUrl}}" /></div>{{/if}}
 <div class="text">
     <h2>{{name}}</h2>
     {{{blurb}}}
