--- a/src/styles/components/strips.scss
+++ b/src/styles/components/strips.scss
@@ -1,8 +1,7 @@
 .strips {
     display: flex;
     flex-flow: row nowrap;
-    height: 1vw;
-    max-height: 1rem;
+    height: 1rem;
     align-items: stretch;
     margin-bottom: 4rem;
 
