--- a/src/app/pages/allies/allies.scss
+++ b/src/app/pages/allies/allies.scss
@@ -7,12 +7,38 @@ $text-black2: rgba(0, 0, 0, 0.7);
 .allies-page {
     line-height: 3rem;
 
+    .container {
+        display: flex;
+        margin: 0 auto;
+        padding: 0 1.5rem;
+        width: 100%;
+        height: 100%;
+        max-width: $boxed-width;
+        flex-flow: column wrap;
+        flex: 1 100%;
+    }
+
     .hero {
         background-color: color(green);
         color: color(neutral-lightest);
+        text-align: left;
+        padding: 8rem 0;
+
+        @include desktop {
+            text-align: center;
+        }
 
         h1 {
             color: color(neutral-lightest);
+        }
+
+        .subhead {
+            padding: 0;
+            text-align: left;
+
+            @include desktop {
+                text-align: center;
+            }
         }
     }
 
@@ -24,11 +50,16 @@ $text-black2: rgba(0, 0, 0, 0.7);
         background-color: lighten(color(neutral-light), 35%);
         line-height: 2.3rem;
         min-height: 10rem;
-        padding: 2rem 3rem;
+        position: relative;
+        padding: 8rem 0;
     }
 
     .strips {
         margin-bottom: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
     }
 
     .ally-info {
@@ -36,9 +67,15 @@ $text-black2: rgba(0, 0, 0, 0.7);
         background-color: color(neutral-lightest);
         color: $text-black2;
         display: flex;
+        flex-flow: column nowrap;
         font-size: 1.7rem;
         font-weight: 400;
-        margin: 5rem;
+        margin-bottom: 1.5rem;
+        padding: 3rem;
+
+        @include desktop {
+            flex-flow: row nowrap;
+        }
 
         &.hidden {
             display: none;
@@ -48,41 +85,57 @@ $text-black2: rgba(0, 0, 0, 0.7);
             color: $text-black;
             font-size: 2rem;
             font-weight: bold;
+            letter-spacing: -0.1rem;
         }
 
         .logo {
-            padding: 3vw;
+            flex: 0 0 25%;
+            margin-bottom: 3rem;
 
-            @include tablet {
-                display: none;
-            }
-
-            @include phone {
-                display: none;
+            @include desktop {
+                margin-bottom: 0;
+                margin-right: 3rem;
             }
 
             img {
-                width: calc(9rem + 6vw);
+                width: 100%;
             }
         }
 
         .text {
             display: flex;
             flex-direction: column;
-            padding: 3rem;
+            align-items: flex-start;
         }
 
         a {
+            position: relative;
             color: color(cyan);
-            font-size: 2rem;
-            font-variant: small-caps;
+            text-transform: uppercase;
+            font-size: 1.4rem;
             font-weight: 500;
-            text-transform: lowercase;
+
+            &::before,
+            &::after {
+                border-right: 0.2rem solid;
+                content: '';
+                display: block;
+                height: 0.7rem;
+                position: absolute;
+                transform: rotate3d(0, 0, 1, 135deg);
+                right: -1.3rem;
+                top: 0.6rem;
+                width: 0;
+            }
 
             &::after {
-                content: '►';
-                font-size: 1.3rem;
-                margin-left: 1rem;
+                top: 1rem;
+                right: -1.3rem;
+                transform: rotate3d(0, 0, 1, 45deg);
+            }
+
+            &:hover {
+                color: darken(color(cyan), 10%);
             }
         }
     }
