--- a/src/styles/components/filter-buttons.scss
+++ b/src/styles/components/filter-buttons.scss
@@ -8,11 +8,12 @@ $text-black3: rgba(0, 0, 0, 0.54);
 
 .filter {
     color: color(gray);
-    height: 0;
-    margin: 0 auto 4rem;
+    margin: 0 auto;
     max-width: 70rem;
-    position: relative;
-    top: -2.5rem;
+    position: absolute;
+    top: -2.1rem;
+    left: 0;
+    right: 0;
     z-index: 1;
 
     &::before,
