remove read it buttons from home page quotes

--- a/src/app/components/quotes/quotes.hbs
+++ b/src/app/components/quotes/quotes.hbs
@@ -9,7 +9,7 @@
                 At first I was like, nope, and now I'm like, yep!<br />
                 &mdash; <cite>Juan C.</cite>
             </blockquote>
-            <a class="btn btn-orange" href="#">Read It</a>
+            <!-- <a class="btn btn-orange" href="#">Read It</a> -->
         </div>
     </div>
 
@@ -20,7 +20,7 @@
                 Here is a place where some cool stuff happened.<br />
                 Check it out.
             </blockquote>
-            <a class="btn btn-orange" href="#">Read It</a>
+            <!-- <a class="btn btn-orange" href="#">Read It</a> -->
         </div>
     </div>
 
@@ -31,7 +31,7 @@
                 Talking about how great something is. "It could be a
                 testimonial from a teacher."
             </blockquote>
-            <a class="btn" href="#">Read It</a>
+            <!-- <a class="btn" href="#">Read It</a> -->
         </div>
     </div>
 </div>
