change foundation nav link to /foundation

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -55,7 +55,7 @@
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="Our Impact menu">
                         <li><a href="/about-us" role="menuitem" tabindex="-1">Who We Are</a></li>
                         <li><a href="/allies" role="menuitem" tabindex="-1">Allies</a></li>
-                        <li><a href="/foundation-support" role="menuitem" tabindex="-1">Foundation Support</a></li>
+                        <li><a href="/foundation" role="menuitem" tabindex="-1">Foundation Support</a></li>
                     </ul>
                 </li>
             </ul>
