Add Faculty Confirmation page styles

--- a/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
+++ b/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
@@ -1,5 +1,6 @@
 <style scoped>
     @import url(/app/pages/adoption-confirmation/adoption-confirmation.css);
+    @import url(/app/components/calculator/calculator.css);
 </style>
 
 <div class="page-intro">
