--- a/src/app/pages/faculty-confirmation/faculty-confirmation.hbs
+++ b/src/app/pages/faculty-confirmation/faculty-confirmation.hbs
@@ -13,8 +13,7 @@
             all of our instructor-only resources.
         </p>
         <p class="blurb-calculator">
-            Use the calculator below to find out how much money you will save your
-            students over the next three years.
+            Use the calculator below to find out how much money you can save your students over the next three years when you adopt OpenStax.
         </p>
         <a href="#savings-calculator" class="caret"></a>
     </div>
@@ -43,11 +42,10 @@
 
         <div class="text-content add-another">
            <h2>
-                Have you adopted OpenStax book?<br />
-                <small>Please, let us know</small>
+                Have you adopted an OpenStax book?
             </h2>
-            <a href="/adoption" title="Add another book" class="btn">Adopt a book</a>
-            <a href="/subjects" title="Go back to our books" class="btn btn-secondary">Go back to our books</a>
+            <a href="/adoption" title="adopt a book" class="btn">Adopt a book</a>
+            <a href="/subjects" title="explore our books" class="btn btn-secondary">Explore our books</a>
         </div>
     </div>
 </div>
