--- a/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
+++ b/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
@@ -42,11 +42,10 @@
 
         <div class="text-content add-another">
            <h2>
-                Have you adopted another OpenStax book?<br />
-                <small>Please, let us know</small>
+                Have you adopted another OpenStax book?
             </h2>
-            <a href="/adoption" title="Add another book" class="btn">Add another book</a>
-            <a href="/subjects" title="Go back to our books" class="btn btn-secondary">Go back to our books</a>
+            <a href="/adoption" title="add another book" class="btn">Add another book</a>
+            <a href="/subjects" title="go back to our books" class="btn btn-secondary">Go back to our books</a>
         </div>
     </div>
 </div>
