--- a/src/app/pages/comp-copy-confirmation/comp-copy-confirmation.hbs
+++ b/src/app/pages/comp-copy-confirmation/comp-copy-confirmation.hbs
@@ -1,8 +1,49 @@
-<h1>Thank you for requesting an iBooks comp copy.</h1>
-<p class="subhead">
-    A member of our Customer Service team will contact you with a code for your
-    free iBooks copy within one to two business days.
-</p>
-<div>
-    <a href="/subjects" class="go-to">Go back to the books</a>
+<style scoped>
+    @import url(/app/pages/comp-copy-confirmation/comp-copy-confirmation.css);
+    @import url(/app/components/calculator/calculator.css);
+</style>
+
+<div class="page-intro">
+    <div class="text-content subhead">
+        <h1>Thank you for requesting an iBooks comp copy.</h1>
+        <p>
+            A member of our Customer Service team will contact you with a code for your
+            free iBooks copy within one to two business days.
+        </p>
+        <p class="blurb-calculator">
+            Use the calculator below to find out how much money you can save your students over the next three years when you adopt OpenStax.
+        </p>
+        <a href="#savings-calculator" class="caret"></a>
+    </div>
+</div>
+
+<div class="wrapper">
+    {{{strips}}}
+    <div class="text-content labeled-inputs row book-info">
+        <div class="calculator">
+        </div>
+        {{!--
+        <div id="support-box" class="support-box">
+            <h2>Support OpenStax College!</h2>
+            <form>
+                <div class="slider-with-ends">
+                    <span>$10</span><input type="range" name="points" min="0" max="12" value="0"><span>$10,000</span>
+                    <span class="amount-box">$<input type="number" min="10" step="5" /></span>
+                </div>
+                <p class="amount-message"></p>
+                <div class="cta">
+                    <input type="submit" value="Donate Now!" />
+                </div>
+            </form>
+        </div>
+        --}}
+
+        <div class="text-content add-another">
+            <h2>
+                Have you adopted an OpenStax book?
+            </h2>
+            <a href="/adoption" title="adopt a book" class="btn">Adopt a book</a>
+            <a href="/subjects" title="explore our books" class="btn btn-secondary">Explore our books</a>
+        </div>
+    </div>
 </div>
