--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -22,7 +22,7 @@
                 </section>
                 <section class="floating-menu">
                     <div class="box">
-                    <h3>Get this title</h3>
+                    <!-- <h3>Get this title</h3> -->
                     <div class="get-this-book"></div>
                     <div class="notes">
                         <!-- <small><sup>*</sup>Our website is Section 508 Level A accessible.</small> -->
