--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -148,13 +148,12 @@
             .cta > .btn {
                 width: 100%;
                 font-variant: normal;
-                margin: 1rem 0 0;
                 padding: 1.5rem;
                 text-transform: uppercase;
             }
 
-            .btn:hover,
-            .btn:focus {
+            .cta > .btn:hover,
+            .cta > .btn:focus {
                 transform: scale3d(1, 1, 1);
                 background-color: darken(color(orange), 5%);
             }
