--- a/src/app/pages/foundation/foundation.hbs
+++ b/src/app/pages/foundation/foundation.hbs
@@ -1,2 +1,102 @@
 <style scoped>@import url(/app/pages/foundation/foundation.css);</style>
-<h1>Foundation</h1>
+<div class="hero">
+    <div class="container">
+        <h1>Our Funders</h1>
+        <p class="subhead">
+            OpenStax is supported by the generous funding of our philanthropic sponsors.
+        </p>
+    </div>
+</div>
+<div class="blurbs">
+    {{{strips}}}
+    <div class="container">
+        <div class="funder">
+            <div class="logo">
+                <img src="/images/foundation/ljaf.gif" />
+            </div>
+            <div class="text">
+                <h2>Arnold Foundation</h2>
+                <p>
+                    Laura and John Arnold Foundation (LJAF) actively seeks opportunities to invest in organizations and thought leaders that have a sincere interest in implementing fundamental changes that not only yield immediate gains, but also repair broken systems for future generations. LJAF currently focuses its strategic investments on education, criminal justice, research integrity, and public accountability.
+                </p>
+            </div>
+        </div>
+        <div class="funder">
+            <div class="logo">
+                <img src="/images/foundation/gates.jpg" />
+            </div>
+            <div class="text">
+                <h2>Gates Foundation</h2>
+                <p>
+                    Guided by the belief that every life has equal value, the Bill &amp; Melinda Gates Foundation works to help all people lead healthy, productive lives. In developing countries, it focuses on improving people’s health with vaccines and other life-saving tools and giving them the chance to lift themselves out of hunger and extreme poverty. In the United States, it seeks to significantly improve education so that all young people have the opportunity to reach their full potential. Based in Seattle, Washington, the foundation is led by CEO Jeff Raikes and Co-chair William H. Gates Sr., under the direction of Bill and Melinda Gates and Warren Buffett.
+                </p>
+            </div>
+        </div>
+        <div class="funder">
+            <div class="logo">
+                <img src="/images/foundation/hewlett.jpg" />
+            </div>
+            <div class="text">
+                <h2>Hewlett Foundation</h2>
+                <p>
+                    The William and Flora Hewlett Foundation has been making grants since 1967 to help solve social and environmental problems at home and around the world. The Foundation concentrates its resources on activities in education, the environment, global development and population, performing arts, and philanthropy, and makes grants to support disadvantaged communities in the San Francisco Bay Area.
+                </p>
+            </div>
+        </div>
+        <div class="funder">
+            <div class="logo">
+                <img src="/images/foundation/kazanjian.png" />
+            </div>
+            <div class="text">
+                <h2>Kazanjian Foundation</h2>
+                <p>
+                    Calvin K. Kazanjian was the founder and president of Peter Paul (Almond Joy), Inc. He firmly believed that the more people understood about basic economics the happier and more prosperous they would be. Accordingly, he established the Calvin K. Kazanjian Economics Foundation Inc, in 1949 as a philanthropic, nonpolitical educational organization to support efforts that enhanced economic understanding.
+                </p>
+            </div>
+        </div>
+        <div class="funder">
+            <div class="logo">
+                <img src="/images/foundation/maxfield.png" />
+            </div>
+            <div class="text">
+                <h2>Maxfield Foundation</h2>
+                <p>
+                    The Maxfield Foundation supports projects with potential for high impact in science, education, sustainability, and other areas of social importance.
+                </p>
+            </div>
+        </div>
+        <div class="funder">
+            <div class="logo">
+                <img src="/images/foundation/rice.jpg" />
+            </div>
+            <div class="text">
+                <h2>Rice University</h2>
+                <p>
+                    As a leading research university with a distinctive commitment to undergraduate education, Rice University aspires to pathbreaking research, unsurpassed teaching, and contributions to the betterment of our world. It seeks to fulfill this mission by cultivating a diverse community of learning and discovery that produces leaders across the spectrum of human endeavor.
+                </p>
+            </div>
+        </div>
+        <div class="funder">
+            <div class="logo">
+                <img src="/images/foundation/sick-fund.gif" />
+            </div>
+            <div class="text">
+                <h2>Sick Fund</h2>
+                <p>
+                    The Bill and Stephanie Sick Fund supports innovative projects in the areas of Education, Art, Science and Engineering.
+                </p>
+            </div>
+        </div>
+        <div class="funder">
+            <div class="logo">
+                <img src="/images/foundation/20mm.png" />
+            </div>
+            <div class="text">
+                <h2>Twenty Million Minds Foundation</h2>
+                <p>
+                    Our mission at the Twenty Million Minds Foundation is to grow access and success by eliminating unnecessary hurdles to affordability. We support the creation, sharing, and proliferation of more effective, more affordable educational content by leveraging disruptive technologies, open educational resources, and new models for collaboration between for-profit, nonprofit, and public entities.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
