Replace registered-trademark symbol with superscripted version
Done in boilerplate and in select options

--- a/src/app/components/shell/footer/footer.hbs
+++ b/src/app/components/shell/footer/footer.hbs
@@ -35,7 +35,7 @@
         </p>
 
         <p>
-            Advanced Placement&reg; and AP&reg; are trademarks registered and/or
+            Advanced Placement<sup>&reg;</sup> and AP<sup>&reg;</sup> are trademarks registered and/or
             owned by the College Board, which was not involved in the
             production of, and does not endorse, this site.
         </p>
