--- a/src/app/pages/home/education/education.hbs
+++ b/src/app/pages/home/education/education.hbs
@@ -29,7 +29,7 @@
             <li>
                 <a class="btn btn-large btn-yellow k-12" href="/k12">
                     <span class="title">K-12</span>
-                    <span class="blurb">Adapative learning courseware and textbooks for &reg;AP courses</span>
+                    <span class="blurb">Adapative learning courseware and textbooks for AP<sup>&reg;</sup> courses</span>
                 </a>
             </li>
         </ul>
