--- a/src/app/pages/adoption-confirmation/adoption-confirmation.scss
+++ b/src/app/pages/adoption-confirmation/adoption-confirmation.scss
@@ -5,6 +5,16 @@
     .subhead {
         padding-bottom: 3rem;
     }
+
+    .add-another {
+        padding-top: 5rem;
+    }
+
+    .calculator {
+        padding-top: 0;
+        padding-bottom: 8rem;
+    }
+
 }
 
 
