--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -94,9 +94,12 @@
 
     <div class="col">
         <label>
-            Decision date<br>
-            <input id="decision-date" type="date" />
-            <input id="hidden-decision-date" type="hidden" name="00NU00000052i3K" />
+            Decision date
+            <select name="00NU00000052i3K" />
+                <option value="Fall" selected>Fall</option>
+                <option value="Spring">Spring</option>
+                <option value="Summer">Summer</option>
+            </select>
         </label>
 
         <label class="form-item">
