Change k-12 Tutor graphic
Add paper plane svg, remove people, add color strips to bottom

--- a/src/app/pages/k-12/k-12.hbs
+++ b/src/app/pages/k-12/k-12.hbs
@@ -23,7 +23,10 @@
             </div>
         </div>
 
-        <div class="tutor-banner" id="tutor"></div>
+        <div class="tutor-banner" id="tutor">
+            <img class="tutor-bg-overlay" src="/images/k-12/paper-plane.svg" />
+        </div>
+        {{{strips}}}
 
         <div class="boxes"></div>
 
