--- a/src/app/pages/k-12/tutor/tutor.hbs
+++ b/src/app/pages/k-12/tutor/tutor.hbs
@@ -4,10 +4,13 @@
 
 <div class="tutor">
     <div class="tutor-caption">
-        <div class="image"></div>
         <div class="caption">
             <span class="title">OpenStax Tutor</span>
-            <span class="blurb">Our customizable courseware uses cognitive science and machine learning to create a personalized learning experience that empowers students to succeed.</span>
+            <span class="blurb">
+                Our customizable courseware uses cognitive science and machine
+                learning to create a personalized learning experience that
+                empowers students to succeed.
+            </span>
             <a class="btn btn-orange" href="/allies">Learn more</a>
         </div>
     </div>
