add touchmove eventlistener to prevent body scrolling
Body would scroll when mobile menu was open without position: fixed on body.
However, using fixed positioning caused regressions with click events.
Instead, I use a touchmove eventlistener on page-header to prevent scrolling.

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -3,7 +3,10 @@
 
 .home-page {
     flex: 1 0 auto;
-    margin-top: -7rem;
+
+    @include desktop {
+        margin-top: -6rem;
+    }
 }
 
 .quote-buckets {
