Make product boxes a global component

--- a/src/app/pages/k-12/k-12.hbs
+++ b/src/app/pages/k-12/k-12.hbs
@@ -1,37 +1,15 @@
 <style scoped>
     @import url(/app/pages/k-12/k-12.css);
-    @import url(/app/pages/k-12/banner.css);
-    @import url(/app/components/buckets/buckets.css);
-    @import url(/app/components/quotes/quotes.css);
 </style>
 <div class="k-12-page">
     <main id="maincontent">
         <div class="banner"></div>
-
-        <div class="quotes-buckets">
-            <div class="quotes">
-                <div class="quote-bucket right">
-                    <div class="image"></div>
-                    <div class="quote">
-                        <blockquote>
-                            At first I was like, nope, and now I'm like, yep!<br />
-                            &mdash; <cite>Juan C.</cite>
-                        </blockquote>
-                        <a class="btn btn-orange" href="#">Read It</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+        <div class="quotes"></div>
         <div class="tutor-banner" id="tutor">
             <img class="tutor-bg-overlay" src="/images/k-12/paper-plane.svg" />
         </div>
         {{{strips}}}
-
-        <div class="boxes"></div>
-
-        <div class="buckets">
-            <div class="buckets-section"></div>
-        </div>
+        <div class="products"></div>
+        <div class="buckets"></div>
     </main>
 </div>
